# libpdf

./: .gitignore  Cargo.toml  DEV_README.md  Earthfile  README.md  RELEASE_NOTE.md  bun.lockb  index.js  libpdf.node  package-lock.json  package.json  text.txt
.github/workflows/: CI.yml  release.yml
benchmark/: README.md  benchmark_results.csv  bun.lockb  index.ts  package.json
benchmark/results/: benchmark_results.csv
src/: extract_text.rs  lib.rs
test/: libpdf.node
tests/: document.test.ts
