[package]
name = "docreader"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
pdf-extract = "0.7.6"
