[package]
name = "libpdf"
version = "0.2.1"
license = "ISC"
edition = "2021"
exclude = ["libpdf.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { version = "1.0.0", default-features = false, features = ["napi-6"] }
lopdf = "0.32.0"
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
